fix alignment of video page hero background

--- a/src/styles/video/video-hero.scss
+++ b/src/styles/video/video-hero.scss
@@ -5,7 +5,7 @@
   height: 540px;
 
   @include media(sm) {
-    height: 562px;
+    height: 510px;
   }
 
   @include media(xs) {
@@ -22,7 +22,7 @@
 
   .h1 {
     margin: 0 auto 6px;
-    max-width: 530px;
+    max-width: 600px;
     position: relative;
     z-index: 1;
 
